tests/parser-test-files/bad-files/parse-if.4.error
error: Malformed if expression
  --> test:4:21
   |
 4 |  (define x (if 1 2 3 4))
   |                      ^ unexpected trailing form
